Avoid h1 to overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,7 +70,7 @@ main {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: min(11vw, 2.5rem);
     padding: 0.6em 0em;
     color: var(--heading-text-color);
 }
